WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41745
[DRT/Chromium] Fix two regressions
https://bugs.webkit.org/show_bug.cgi?id=41745
Summary
[DRT/Chromium] Fix two regressions
Kent Tamura
Reported
2010-07-06 23:53:11 PDT
[DRT/Chromium] Fix two regressions
Attachments
Patch
(2.40 KB, patch)
2010-07-06 23:58 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-07-06 23:58:53 PDT
Created
attachment 60696
[details]
Patch
Adam Barth
Comment 2
2010-07-07 02:33:57 PDT
Comment on
attachment 60696
[details]
Patch Hum... This change is mysterious to me.
Dimitri Glazkov (Google)
Comment 3
2010-07-07 08:43:20 PDT
Comment on
attachment 60696
[details]
Patch ok.
Kent Tamura
Comment 4
2010-07-07 20:34:45 PDT
Comment on
attachment 60696
[details]
Patch Clearing flags on attachment: 60696 Committed
r62749
: <
http://trac.webkit.org/changeset/62749
>
Kent Tamura
Comment 5
2010-07-07 20:34:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug