2010-07-07  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Fix two regressions
        https://bugs.webkit.org/show_bug.cgi?id=41745

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::paintInvalidatedRegion):
         Repaint three times to fix svg/W3C-SVG-1.1/struct-use-01-t.svg
         and svg/custom/use-on-g-containing-foreignObject-and-image.svg
         though test_shell does it twice. Probably DRT needs it because
         DRT delays painting as possible.

Canonical link: https://commits.webkit.org/53647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62749 268f45cc-cd09-0410-ab3c-d52691b4dbfc